cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(hmm VERSION 1.0)

file(GLOB HMMSRCS CONFIGURE_DEPENDS *.cpp)

set(WINDOWS_EXPORT_ALL_SYMBOLS ON)

add_library(${PROJECT_NAME} SHARED ${HMMSRCS})

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/hmm INTERFACE ${CMAKE_CURRENT_LIST_DIR})
