cmake_minimum_required(VERSION 3.15)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
project(parser1 VERSION 1.0)

file(GLOB PARSER_SRCS CONFIGURE_DEPENDS *.cpp)

add_library(${PROJECT_NAME} ${PARSER_SRCS})

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/line_parser INTERFACE ${CMAKE_CURRENT_LIST_DIR})
